# Fazenda

./: README.md
Projeto/: CMakeLists.txt
Projeto/src/: main.cpp
Projeto/src/BackEnd/Boi/: Boi.cpp  Boi.h
Projeto/src/BackEnd/Boi/Gastos/: Gastos.cpp  Gastos.h
Projeto/src/BackEnd/Boi/Vacina/: Vacina.cpp  Vacina.h
Projeto/src/BackEnd/Boi/Valor/: Valor.cpp  Valor.h
Projeto/src/BackEnd/Fazenda/: Fazenda.h
Projeto/src/BackEnd/Fazenda/Boi/: Boi.cpp
Projeto/src/BackEnd/Fazenda/Boi/Gastos/: Gastos.cpp  Gastos.h
Projeto/src/BackEnd/Fazenda/Boi/Vacina/: Vacina.cpp  Vacina.h
Projeto/src/BackEnd/Fazenda/Boi/Valor/: Valor.cpp  Valor.h
Projeto/src/BackEnd/Fazenda/GastosFazenda/: GastosFazenda.cpp  GastosFazenda.h
Projeto/src/BackEnd/Fazenda/Pagamento/: Pagamento.cpp  Pagamento.h
Projeto/src/BackEnd/Fazenda/Receita/: Receita.h
Projeto/src/FrontEnd/Secundaria/Janela1/: SecondWindow.cpp  SecondWindow.h
Projeto/src/FrontEnd/TelaPrincipal/: Principal.cpp  Principal.h  myapplication.cpp  myapplication.h
